# doomretro

./: .gitattributes  .gitignore  .tokeignore  .travis.yml  AUTHORS  CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  DoomRetro.cbp  LICENSE  README.md  c_cmds.c  i_video.c  index.html  params.json  releasenotes.md
.github/: FUNDING.yml
.github/workflows/: build.yml  codeql-analysis.yml  codeql.yml  main.yml
SDL2-2.0.10/: WhatsNew.txt
SDL2-2.0.10/include/: SDL_revision.h
SDL2-2.0.12/include/: SDL_revision.h
SDL2-2.0.14/: WhatsNew.txt
SDL2-2.0.14/include/: SDL_revision.h
SDL2-2.0.16/: WhatsNew.txt
SDL2-2.0.16/docs/: README-dynapi.md  README-ios.md  README-linux.md  README.md
SDL2-2.0.16/include/: SDL_revision.h
SDL2-2.0.18/: WhatsNew.txt
SDL2-2.0.18/include/: SDL_revision.h
SDL2-2.0.20/: WhatsNew.txt
SDL2-2.0.20/include/: SDL_revision.h
SDL2-2.0.22/: WhatsNew.txt
SDL2-2.0.22/lib/: SDL2main.lib  SDL2test.lib
SDL2-2.0.4/: WhatsNew.txt
SDL2-2.0.5/: README.txt  WhatsNew.txt
SDL2-2.0.5/docs/: README-android.md  README-macosx.md
SDL2-2.0.5/include/: SDL_revision.h
SDL2-2.0.6/: WhatsNew.txt
SDL2-2.0.6/docs/: README-ios.md  README-linux.md  README-winrt.md
SDL2-2.0.6/include/: SDL_revision.h
SDL2-2.0.7/include/: SDL_revision.h
SDL2-2.0.8/: WhatsNew.txt
SDL2-2.0.8/include/: SDL_revision.h
SDL2-2.0.9/: WhatsNew.txt
SDL2-2.0.9/docs/: README-android.md
SDL2-2.0.9/include/: SDL_revision.h
SDL2-2.25.1/include/: SDL_revision.h
SDL2-2.26.0/include/: SDL_revision.h
SDL2-2.26.4/include/: SDL_revision.h
SDL2-2.27.1/include/: SDL_revision.h
SDL2-2.28.1/include/: SDL_revision.h
SDL2-2.29.1/docs/: README-gdk.md
SDL2-2.29.1/include/: SDL_revision.h
SDL2-2.29.2/: WhatsNew.txt
SDL2-2.29.2/include/: SDL_revision.h
SDL2-2.29.3/include/: SDL_revision.h
SDL2-2.30.10/: .git-hash
SDL2-2.30.11/: .git-hash
SDL2-2.30.12/: .git-hash
SDL2-2.30.8/: .git-hash
SDL2-2.30.9/: .git-hash
SDL2-2.32.0/: .git-hash
SDL2-2.32.10/: .git-hash
SDL2-2.32.2/: .git-hash
SDL2-2.32.4/: .git-hash
SDL2-2.32.6/: .git-hash
SDL2-2.32.8/: .git-hash
SDL2_image-2.0.3/include/: SDL_image.h
SDL2_image-2.0.4/: CHANGES.txt
SDL2_image-2.5.3/include/: SDL_image.h
SDL2_image-2.6.0/: CHANGES.txt
SDL2_image-2.6.0/include/: SDL_image.h
SDL2_image-2.6.1/: CHANGES.txt
SDL2_image-2.6.1/include/: SDL_image.h
SDL2_image-2.6.2/include/: SDL_image.h
SDL2_image-2.7.1/include/: SDL_image.h
SDL2_image-2.8.0/: CHANGES.txt
SDL2_image-2.8.0/include/: SDL_image.h
SDL2_image-2.8.1/include/: SDL_image.h
SDL2_image-2.8.10/: .git-hash
SDL2_image-2.8.10/cmake/: sdl2_image-config.cmake
SDL2_image-2.8.10/include/: SDL_image.h
SDL2_image-2.8.12/: .git-hash
SDL2_image-2.8.12/include/: SDL_image.h
SDL2_image-2.8.2/include/: SDL_image.h
SDL2_image-2.8.3/: .git-hash
SDL2_image-2.8.3/include/: SDL_image.h
SDL2_image-2.8.4/: .git-hash
SDL2_image-2.8.4/include/: SDL_image.h
SDL2_image-2.8.5/: .git-hash  CHANGES.txt
SDL2_image-2.8.5/include/: SDL_image.h
SDL2_image-2.8.6/: .git-hash  CHANGES.txt
SDL2_image-2.8.6/include/: SDL_image.h
SDL2_image-2.8.8/: .git-hash  CHANGES.txt  README.txt
SDL2_mixer-2.0.0/include/: SDL_mixer.h
SDL2_mixer-2.0.2/include/: SDL_mixer.h
SDL2_mixer-2.0.3/: CHANGES.txt
SDL2_mixer-2.0.3/include/: SDL_mixer.h
SDL2_mixer-2.5.3/: CHANGES.txt
SDL2_mixer-2.5.3/include/: SDL_mixer.h
SDL2_mixer-2.6.0/include/: SDL_mixer.h
SDL2_mixer-2.6.1/: CHANGES.txt
SDL2_mixer-2.6.1/include/: SDL_mixer.h
SDL2_mixer-2.7.2/include/: SDL_mixer.h
SDL2_mixer-2.8.0/: CHANGES.txt  README.txt
SDL2_mixer-2.8.0/cmake/: sdl2_mixer-config.cmake
SDL2_mixer-2.8.0/include/: SDL_mixer.h
SDL2_mixer-2.8.1/: .git-hash  CHANGES.txt  README.txt
SDL2_mixer-2.8.1/cmake/: sdl2_mixer-config.cmake
SDL2_mixer-2.8.1/include/: SDL_mixer.h
SDL2_mixer-2.8.2/: .git-hash  CHANGES.txt  README.txt
SDL2_mixer-2.8.2/cmake/: sdl2_mixer-config.cmake
SDL2_mixer-2.8.2/include/: SDL_mixer.h
SDL3-3.4.10/: INSTALL.md
SDL3-3.4.10/cmake/: SDL3Config.cmake  SDL3ConfigVersion.cmake
SDL3_image-3.4.4/: .git-hash  INSTALL.md  README.md
SDL3_image-3.4.4/cmake/: SDL3_imageConfig.cmake  SDL3_imageConfigVersion.cmake
SDL3_mixer-3.2.4/: .git-hash  INSTALL.md  README.md
SDL3_mixer-3.2.4/cmake/: SDL3_mixerConfig.cmake  SDL3_mixerConfigVersion.cmake
codeblocks/: doomretro.cbp
docs/: releasenotes.md
midiproc/: .gitignore  main.cpp  midiproc.h  midiproc.idl  midiproc.sln  midiproc.vcxproj  midiproc_c.c  midiproc_s.c
midiproc/vc2008/: .gitignore  midiproc.sln  midiproc.vcproj
midiproc/vc2012/: .gitignore  midiproc.vcxproj  midiproc.vcxproj.filters
miniz/: miniz.c
msvc/: doomretro.props  doomretro.sln  doomretro.slnx  doomretro.vcxproj  packages.config
msvc/Debug/: doomretro.wad
msvc/Debug (SDL2)/: doomretro.wad
msvc/Release/: default.cfg  doomretro.cfg  doomretro.lib  doomretro.wad
msvc/Release (SDL2)/: doomretro.cfg  doomretro.wad
res/: ANIMATED.lmp  AUTOCOMP  BRGHTMPS  BRGHTMPS.lmp  BRGHTMPS.txt  BRIGHTM  CHEXBEX  CHEXBEX.lmp  CHEXBEX.txt  CHEXDEH  DEHACKED  DEHACKED.deh  DEHACKED.lmp  DRCOMPAT  DRCOMPAT.lmp  DRCOMPAT.txt  DRTEXT1  DRTEXT2  NOLIQUID  PLAYPAL.pal  SPLSHPAL.pal  VANILLA  VANILLA.cfg  VANILLA.lmp  VANILLA.txt  VANILLA1  VANILLA2  VERSION  WATERMAP.lmp  doomretro.desktop  doomretro.wad  e1m4b.txt  e1m4b.wad  e1m8b.txt  e1m8b.wad
res/breach/: breach.txt
res/wads/: breach.txt  brigandine.txt
scripts/: build.sh
src/: Makefile  Makefile.linux64  Makefile.mingw  Makefile.osx  Makefile.rpi  am_map.c  am_map.h  c_autocomplete.c  c_cmds.c  c_cmds.h  c_console.c  c_console.h  c_obituary.c  c_obituary.h  config.h  d_deh.c  d_deh.h  d_english.h  d_englsh.h  d_event.h  d_items.c  d_items.h  d_iwad.c  d_iwad.h  d_loop.c  d_loop.h  d_main.c  d_main.h  d_net.c  d_net.h  d_player.h  d_textur.h  d_think.h  d_ticcmd.h  deh_ammo.c  deh_cheat.c  deh_defs.h  deh_doom.c  deh_frame.c  deh_io.c  (+197 more)
src/doom/: info.c  info.h
src/miniz/: miniz.c
tests/: test_invariant_w_file.c
website/: template.html
(+133 files in other folders)
